# cos_backend

./: .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  Rocket.toml  db.sh  docker-compose.yaml
api/: Cargo.toml
api/src/: auth.rs  event_handler.rs  image_handler.rs  lib.rs  message_handler.rs  post_handler.rs  user_handler.rs  util.rs
api/src/extractors/: auth.rs  limit.rs  mod.rs
application/: Cargo.toml
application/src/: auth.rs  lib.rs  util.rs
application/src/event/: create.rs  read.rs
application/src/message/: create.rs  read.rs
application/src/post/: comment.rs  create.rs  interact.rs  mod.rs  read.rs
application/src/user/: create.rs  interact.rs  login.rs  mod.rs  modify.rs  read.rs  register.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs  schema.rs  sql_types.rs
domain/src/models/: comment.rs  comments.rs  event.rs  events.rs  joined.rs  message.rs  messages.rs  mod.rs  post.rs  relations.rs  user.rs
infrastructure/: Cargo.toml  diesel.toml
infrastructure/migrations/: 2022-12-26-195824_create_users.up.sql  2022-12-26-195917_create_comments.down.sql  2022-12-26-195917_create_comments.up.sql  2022_12_26_195843_create_messages.up.sql  2022_12_26_195856_create_events.up.sql  2022_12_26_195908_create_posts.up.sql  2023_01_28_150359_create_user_relations.up.sql
infrastructure/migrations/2022-12-25-224046_create_posts/: down.sql  up.sql
infrastructure/migrations/2022-12-26-195824/: create_users.down.sql  create_users.up.sql
infrastructure/migrations/2022-12-26-195824_create_users/: down.sql  up.sql
infrastructure/migrations/2022-12-26-195843/: create_messages.up.sql
infrastructure/migrations/2022-12-26-195843_create_messages/: down.sql  up.sql
infrastructure/migrations/2022-12-26-195856/: create_events.up.sql
infrastructure/migrations/2022-12-26-195856_create_events/: down.sql  up.sql
infrastructure/migrations/2022-12-26-195908/: create_posts.down.sql  create_posts.up.sql
infrastructure/migrations/2022-12-26-195908_create_posts/: down.sql  up.sql
infrastructure/migrations/2022-12-26-195917/: create_comments.up.sql
infrastructure/migrations/2022-12-26-195917_create_comments/: up.sql
infrastructure/migrations/2023-01-28-150359/: create_user_relations.down.sql  create_user_relations.up.sql
infrastructure/migrations/2024-02-28-183844/: post_relations_indices.down.sql  post_relations_indices.up.sql
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: auth.rs  lib.rs  operation.rs  request_models.rs  response_models.rs
