# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "application", "domain", "infrastructure", "shared"]


[workspace.dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "migrate"] }

axum = "0.6.2"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"

serde = { version = "1.0.147" }
serde_json = "1.0.88"

[workspace.profile.dev.package.sqlx-macros]
opt-level = 3
