# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["api", "application", "domain", "infrastructure", "shared"]
resolver = "2"

[workspace.dependencies]
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio",
] }

axum = { version = "0.6.2", features = [] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.*", default-features = false }

serde = { version = "1.0.147" }
serde_json = "1.0.88"

chrono = { version = "0.4.31", default-features = false, features = [] }
