# api/Cargo.toml

[package]
name = "api"
version = "0.2.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true, features = ["headers", "query"] }
tower = { workspace = true, features = [] }
tower-http = { workspace = true, features = ["fs"] }
sqlx = { workspace = true }

dotenvy = "0.15.6"
tracing-subscriber = "0.3.17"
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = { version = "0.3.30", default-features = false, features = [
    "std",
    "async-await",
] }
mime_guess = "2.0.4"
