# application/Cargo.toml

[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

sqlx = { workspace = true, features = ["postgres"] }
# serde = { workspace = true }
# serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

argon2 = "0.4.1"
jsonwebtoken = { version = "8", default-features = false }
rand_core = { version = "0.6", features = ["std"] }
once_cell = "1.18.0"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
const_format = "0.2.32"
